--- a/app/package.json
+++ b/app/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.18",
     "@reduxjs/toolkit": "^1.9.6",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
     "expo": "~49.0.13",
     "expo-image": "~1.3.4",
     "expo-status-bar": "~1.6.0",
